<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_setting">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="menu_button_1">Menu One</string>
    <string name="menu_button_2">Menu Two</string>
    <string name="menu_button_3">Menu Three</string>
    <string name="menu_button_4">Menu Four</string>
    <string name="menu_button_5">Menu Five</string>
    <string name="menu_button_6">Menu Six</string>
    <string name="title_activity_frags">Frags</string>

</resources>
